fixed some spacing issues and sat the footer to default position for more readability

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,7 +2,7 @@
 
 header {
     box-sizing: border-box;
-    margin: 0;
+    margin-bottom: 3em;
     padding: 0;
     background-color: #24252A;
 
